# gamepad-server

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: input.rs  main.rs  server.rs  utils.rs
