[package]
name = "gamepad-server"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ArkStructCodes/gamepad-server"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
env_logger = "0.11.7"
evdev = "0.13.0"
local-ip-address = "0.6.3"

[dependencies.bitvec]
version = "1"
features = ["std"]

[dependencies.log]
version = "0.4.26"
features = ["release_max_level_info"]
