[package]
name = "padpipe"
version = "0.1.0"
edition = "2024"
description = "Pipes inputs over the network into a virtual gamepad device"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/ArkStructCodes/gamepad-server"
keywords = ["cli", "utility", "linux", "input", "tools"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
evdev = "0.13.0"
local-ip-address = "0.6.3"

[dependencies.env_logger]
version = "0.11.7"
default-features = false
features = ["auto-color", "humantime"]

[dependencies.bitvec]
version = "1"
default-features = false
features = ["std"]

[dependencies.log]
version = "0.4.26"
features = ["release_max_level_info"]
